# zap

./: Cargo.toml  README.adoc  inventory.yml
cli/: Cargo.toml
cli/src/: inventory.rs  main.rs
cli/src/transport/: mod.rs  ssh.rs
examples/: basic.zplan
examples/bsd-webapp/: inventory.yml  webapp.plan
examples/simple-web-containers/: Dockerfile  README.adoc  docker-compose.yml
model/: Cargo.toml
model/src/: lib.rs  plan.pest  plan.rs  task.pest
model/src/inventory/: mod.rs
model/src/plan/: mod.rs
model/src/task/: mod.rs
model/src/transport/: mod.rs  ssh.rs
parser/: Cargo.toml
parser/src/: lib.rs  plan.pest  plan.rs  task.pest  task.rs
tasks/: echo.ztask
tasks/install/: freebsd.ztask  zypper.ztask
tasks/shell/: bash.ztask  sh.ztask
