[package]
name = "zap-cli"
version = "0.1.1"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"
description = "A simple configuration management and orchestration tool"
homepage = "https://github.com/rtyler/zap"
repository = "https://github.com/rtyler/zap"
license = "AGPL-3.0+"
keywords = ["sysadmin", "management"]

[[bin]]
name = "zap"
path = "src/main.rs"


[dependencies]
colored = "2"
gumdrop = "~0.8.0"
log = "0.4"
pretty_env_logger = "0.4"
# Needed for deserializing JSON messages _and_ managing our configuration
# effectively
serde = { version = "~1.0", features = ["derive", "rc"] }
serde_derive = "~1.0"
serde_json = "~1.0"
serde_yaml = "~0.8"
ssh2 = "~0.9.0"
zap-model = { version = "~0.1", path = "../model" }
