[package]
name = "zap-cli"
version = "0.2.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"
description = "A simple configuration management and orchestration tool"
homepage = "https://github.com/rtyler/zap"
repository = "https://github.com/rtyler/zap"
license = "AGPL-3.0+"
keywords = ["sysadmin", "management"]

[[bin]]
name = "zap"
path = "src/main.rs"

[dependencies]
colored = "2"
gumdrop = "0"
log = "0"
pretty_env_logger = "0"
serde = { version = "1", features = ["derive", "rc"] }
serde_yaml = "0"
zap-model = { version = "0", path = "../model" }

# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "*"

[features]
# Force openssl-sys to staticly link in the openssl library.
# Necessary when cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
