[package]
name = "zap-model"
version = "0.2.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"
description = "Internal models for zap, a simple configuration management tool"
homepage = "https://github.com/rtyler/zap"
repository = "https://github.com/rtyler/zap"
license = "AGPL-3.0+"
keywords = ["sysadmin", "management"]

[dependencies]
colored = "2"
handlebars = "~3.5"
log = "0.4"
pest = "~2.1"
pest_derive = "~2.1"
# Needed for deserializing JSON messages _and_ managing our configuration
# effectively
serde = { version = "~1.0", features = ["derive", "rc"] }
serde_derive = "~1.0"
serde_json = "~1.0"
serde_yaml = "~0.8"
ssh2 = "~0.9.0"
