[package]
name = "zap-model"
version = "0.2.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"
description = "Internal models for zap, a simple configuration management tool"
homepage = "https://github.com/rtyler/zap"
repository = "https://github.com/rtyler/zap"
license = "AGPL-3.0+"
keywords = ["sysadmin", "management"]

[dependencies]
colored = "2"
handlebars = "3"
log = "0"
pest = "2"
pest_derive = "2"
# Needed for deserializing JSON messages _and_ managing our configuration
# effectively
serde = { version = "1", features = ["derive", "rc"] }
serde_derive = "1"
serde_json = "1"
serde_yaml = "0"
ssh2 = "0"
url = "2"
# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "*"

[features]
# Force openssl-sys to staticly link in the openssl library.
# Necessary when cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
